<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:layout_marginTop="200dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/input_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box"
        android:textAlignment="center"
        android:textStyle="italic"
        android:inputType="textEmailSubject"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:hint="@string/input_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box"
        android:textAlignment="center"
        android:textStyle="italic"
        android:inputType="textPassword"
       />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone"/>

    <Button
        android:id="@+id/login"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="OR"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sign in with google"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    <TextView
        android:id="@+id/register"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_register"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="15sp"
        />

</LinearLayout>
    </ScrollView>
</LinearLayout>