<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/linkedin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkedin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/box"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="161dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:background="@drawable/box"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginTop="5dp"
                ></ImageView>

            <TextView
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:onClick="selectImage"
                android:text="upload image"
                android:textSize="20sp"
                android:textStyle="bold"

                ></TextView>


        </LinearLayout>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="firstname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="lastname"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="text" />


        <Spinner
            android:id="@+id/gender_array"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:hint="short bio"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="skills"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="text" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/input_phone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box"
            android:textAlignment="center"
            android:textStyle="italic"
            android:inputType="phone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            android:text="Submit"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="italic" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>